--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This application helps to delete all own messages from a selected telegram group.
+This application helps to delete all own messages for all group members in a selected telegram group.
 
 # Requirements
 
